samples/_failures_safe/1761222163_8898ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1312357f.c: In function ‘main’:
./samples/SAFE/__tmp_1312357f.c:142:5: error: expected expression at end of input
  142 |     if (scanf("%u", &original_size) != 1 || original_size == 0 || original_size >
      |     ^~
./samples/SAFE/__tmp_1312357f.c:142:5: error: expected declaration or statement at end of input
